--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -938,6 +938,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
         dry_matter_rate: "Taux de matière sèche"
@@ -5513,6 +5514,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
         dry_matter_rate: "Taux de matière sèche"
@@ -5609,6 +5611,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
         dry_matter_rate: "Taux de matière sèche"
@@ -5943,6 +5946,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
         dry_matter_rate: "Taux de matière sèche"
@@ -6039,6 +6043,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
         dry_matter_rate: "Taux de matière sèche"
