--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -3,7 +3,7 @@ fra:
     abilities:
       name: "Compétences"
       property_natures:
-        # parameters: "Parameters"
+        parameters: "Paramètres"
       items:
         bunch: "Boteller"
         care: "Soigner"
@@ -305,33 +305,33 @@ fra:
         cobaltihexamine: "Cobaltihexamine"
         metson: "Metson"
     certification_labels:
-      # name: "Certification labels"
+      name: "Labels"
       items:
-        # aoc: "Aoc"
-        # aop: "Aop"
-        # aor: "Aor"
-        # bio: "Bio"
-        # ig: "Ig"
-        # igp: "Igp"
-        # label_rouge: "Label rouge"
+        aoc: "Aoc"
+        aop: "Aop"
+        aor: "Aor"
+        bio: "Agriculture Biologique"
+        ig: "Ig"
+        igp: "Igp"
+        label_rouge: "Label Rouge"
     certifications:
-      # name: "Certifications"
+      name: "Certifications"
       property_natures:
-        # labels: "Labels"
-        # land: "Land"
+        labels: "Labels"
+        land: "Terroir"
       choices:
         # land: # Choices comes from nomenclature: lands
       items:
-        # bordeaux_blanc: "Bordeaux blanc"
-        # bordeaux_blanc_avec_sucres: "Bordeaux blanc avec sucres"
-        # bordeaux_clairet: "Bordeaux clairet"
-        # bordeaux_claret: "Bordeaux claret"
-        # bordeaux_haut_benauge: "Bordeaux haut benauge"
-        # bordeaux_haut_benauge_avec_sucres: "Bordeaux haut benauge avec sucres"
-        # bordeaux_rose: "Bordeaux rose"
-        # bordeaux_rouge: "Bordeaux rouge"
-        # bordeaux_superieur_blanc: "Bordeaux superieur blanc"
-        # bordeaux_superieur_rouge: "Bordeaux superieur rouge"
+        bordeaux_blanc: "Bordeaux blanc"
+        bordeaux_blanc_avec_sucres: "Bordeaux blanc avec sucres"
+        bordeaux_clairet: "Bordeaux clairet"
+        bordeaux_claret: "Bordeaux claret"
+        bordeaux_haut_benauge: "Bordeaux haut benauge"
+        bordeaux_haut_benauge_avec_sucres: "Bordeaux haut benauge avec sucres"
+        bordeaux_rose: "Bordeaux rose"
+        bordeaux_rouge: "Bordeaux rouge"
+        bordeaux_superieur_blanc: "Bordeaux supérieur blanc"
+        bordeaux_superieur_rouge: "Bordeaux supérieur rouge"
     charts_of_accounts:
       name: "Plans de comptes"
       items:
@@ -1055,7 +1055,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
-        # certification: "Certification"
+        certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
         dry_matter_rate: "Taux de matière sèche"
@@ -1162,12 +1162,12 @@ fra:
         respiratory_problem: "Problèmes respiratoires"     # animal_pathology
         vegetal_pathology: "Pathologie végétale"           # issue
     lands:
-      # name: "Lands"
+      name: "Terroir"
       items:
-        # blaye: "Blaye"
-        # bordeaux: "Bordeaux"
-        # bordeaux_haut_benauge: "Bordeaux haut benauge"
-        # bordeaux_superieur: "Bordeaux superieur"
+        blaye: "Blaye"
+        bordeaux: "Bordeaux"
+        bordeaux_haut_benauge: "Bordeaux haut benauge"
+        bordeaux_superieur: "Bordeaux supérieur"
     languages:
       name: "Langues"
       items:
@@ -1988,11 +1988,11 @@ fra:
         active: "actif"
         amount: "valeur"
         collect_account: "compte de TVA collectée (radical)"
-        # computation_method: "Computation method"
+        computation_method: "Methode de calcul"
         country: "pays"
         deduction_account: "compte de TVA déductible (radical)"
-        # started_on: "Started on"
-        # stopped_on: "Stopped on"
+        started_on: "Débutée le"
+        stopped_on: "Arrêté le"
         suffix: "suffixe du compte comptable"
       choices:
         # collect_account: # Choices comes from nomenclature: accounts
@@ -2098,8 +2098,8 @@ fra:
       name: "Variétés"
       property_natures:
         derivative_of: "Dérivé"
-        # europa_tsn: "Europa tsn"
-        # itis_tsn: "Itis tsn"
+        europa_tsn: "Europa ID"
+        itis_tsn: "Itis ID"
       choices:
         # derivative_of: # Choices comes from nomenclature: varieties
       items:
