--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -39,7 +39,8 @@ spa:
         # tow: "Tracter"
         # uncompact: "Décompacter"
       # name: "Compétences"
-      property_natures: #?
+      property_natures:
+        # parameters: "Paramètres"
     accounts:
       items:
         # accrued_bank_interests: "Intérêts courus"
@@ -302,11 +303,32 @@ spa:
         # metson: "Metson"
       # name: "Méthodes d’analyse de la capacité d’échange cationique"
     certification_labels:
-      items: #?
+      items:
+        # aoc: "Aoc"
+        # aop: "Aop"
+        # aor: "Aor"
+        # bio: "Agriculture Biologique"
+        # ig: "Ig"
+        # igp: "Igp"
+        # label_rouge: "Label Rouge"
+      # name: "Labels"
     certifications:
       choices: #?
-      items: #?
-      property_natures: #?
+      items:
+        # bordeaux_blanc: "Bordeaux blanc"
+        # bordeaux_blanc_avec_sucres: "Bordeaux blanc avec sucres"
+        # bordeaux_clairet: "Bordeaux clairet"
+        # bordeaux_claret: "Bordeaux claret"
+        # bordeaux_haut_benauge: "Bordeaux haut benauge"
+        # bordeaux_haut_benauge_avec_sucres: "Bordeaux haut benauge avec sucres"
+        # bordeaux_rose: "Bordeaux rose"
+        # bordeaux_rouge: "Bordeaux rouge"
+        # bordeaux_superieur_blanc: "Bordeaux supérieur blanc"
+        # bordeaux_superieur_rouge: "Bordeaux supérieur rouge"
+      # name: "Certifications"
+      property_natures:
+        # labels: "Labels"
+        # land: "Terroir"
     charts_of_accounts:
       items:
         # fr_pcg82: "Plan comptable (PCG1982)"
@@ -947,8 +969,7 @@ spa:
       # name: "Monnaies"
       property_natures:
         # active: "Active"
-    designation_origins:  #?
- #?
+    designation_origins: #?
     dimensions:
       items:
         # amount_of_substance: "Quantité de matière"
@@ -1127,6 +1148,7 @@ spa:
         # calving_ease_index: "Index de facilité de naissance"
         # cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        # certification: "Certification"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # copper_concentration: "Teneur en cuivre"
         # dry_matter_rate: "Taux de matière sèche"
@@ -1240,7 +1262,12 @@ spa:
         # target: "Cible"
         # treatments: "Traitements"
     lands:
-      items: #?
+      items:
+        # blaye: "Blaye"
+        # bordeaux: "Bordeaux"
+        # bordeaux_haut_benauge: "Bordeaux haut benauge"
+        # bordeaux_superieur: "Bordeaux supérieur"
+      # name: "Terroir"
     languages:
       items:
         afr: "Afrikaans"
@@ -2070,8 +2097,11 @@ spa:
         # active: "actif"
         # amount: "valeur"
         # collect_account: "compte de TVA collectée (radical)"
+        # computation_method: "Methode de calcul"
         # country: "pays"
         # deduction_account: "compte de TVA déductible (radical)"
+        # started_on: "Débutée le"
+        # stopped_on: "Arrêté le"
         # suffix: "suffixe du compte comptable"
     units:
       choices: #?
@@ -2397,6 +2427,8 @@ spa:
       # name: "Variétés"
       property_natures:
         # derivative_of: "Dérivé"
+        # europa_tsn: "Europa ID"
+        # itis_tsn: "Itis ID"
     varieties-animal: #?
     varieties-asteraceae: #?
     varieties-equipment: #?
