Adds hard filters on specialized controllers

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -14,8 +14,8 @@ fra:
         drive: "Conduire"
         feed: "Nourrir"
         fertilize: "Fertiliser"
-        germinate: "Germer"
         grind: "Broyer"
+        # grow: "Grow"
         harvest: "Récolter"
         hoe: "Biner"
         implant: "Planter"
@@ -27,6 +27,7 @@ fra:
         mow: "Faucher"
         pick: "Cueillir"
         plow: "Labourer"
+        plow_superficially: "Travailler le sol superficiellement"
         produce: "Produire"
         repair: "Réparer"
         sow: "Semer"
@@ -36,9 +37,7 @@ fra:
         store_fluid: "Stocker du vrac solide"
         store_gaz: "Stocker du gaz"
         store_liquid: "Stocker du vrac liquide"
-        superficial_plow: "Travailler le sol superficiellement"
         # swath: "Swath"
-        take_root: "S’enraciner"
         tow: "Tracter"
         uncompact: "Décompacter"
     accounts:
