--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -12,7 +12,6 @@ jpn:
         # drive: "Conduire"
         # feed: "Nourrir"
         # fertilize: "Fertiliser"
-        # germinate: "Germer"
         # grind: "Broyer"
         # harvest: "Récolter"
         # hoe: "Biner"
@@ -25,6 +24,7 @@ jpn:
         # mow: "Faucher"
         # pick: "Cueillir"
         # plow: "Labourer"
+        # plow_superficially: "Travailler le sol superficiellement"
         # produce: "Produire"
         # repair: "Réparer"
         # sow: "Semer"
@@ -34,8 +34,6 @@ jpn:
         # store_fluid: "Stocker du vrac solide"
         # store_gaz: "Stocker du gaz"
         # store_liquid: "Stocker du vrac liquide"
-        # superficial_plow: "Travailler le sol superficiellement"
-        # take_root: "S’enraciner"
         # tow: "Tracter"
         # uncompact: "Décompacter"
       # name: "Compétences"
