adapt first run

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -997,6 +997,9 @@ fra:
         password: "Mot de passe"
       item_lists:
       items:
+        cartodb_api_key: "Cartodb api key"
+        cartodb_login: "Cartodb login"
+        cartodb_subdomain: "Cartodb subdomain"
         cattling_number: "Numéro de détenteur"
         cattling_root_number: "Numéro racine du troupeau"
         charentes_alliance_extranet_username: "Login Extranet Charentes alliance "
@@ -1136,6 +1139,7 @@ fra:
         unique_synthesis_index: "Index de synthèse unique (ISU)"
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
+        # volume_area_density: "Volume area density"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -1303,6 +1307,7 @@ fra:
           soap: "Soap"
         # nature: # Choices comes from nomenclature: activity_families
       items:
+        cartodb: "Cartodb"
         charentes_alliance_extranet: "Charentes alliance extranet"
         est_elevage: "Est élevage"
         lilco: "Lilco"
@@ -1541,12 +1546,10 @@ fra:
         ascott_wheat_crop: "Culture de blé tendre Ascott"
         ascott_wheat_seed_25: "Semence de blé tendre Ascott"
         asparagus_crop: "Aspergeraie"
-        aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         baler: "Botteleuse"
         barley_grain: "Grain d’orge"
         bean_crop: "Culture de haricot"
         beet_crop: "Culture de betterave"
-        black_valley_land_parcel: "Parcelle de terre noire de vallées"
         bolt: "Boulon"
         bottle_75cl_wine: "Bouteille de vin (75cl)"
         brassicaceae_fungicide: "Fongicide colza"
@@ -1569,10 +1572,7 @@ fra:
         cattle_manure: "Fumier de bovins"
         cattle_slurry: "Lisier de bovins"
         cereals_feed_bag_25: "Aliments céréales - sac de 25 kg"
-        champagne_land_parcel: "Parcelle sur craie Sud Charente et Charente-Martime  (terre de champagne)"
         chemical_fertilizer_division: "Emplacement de stockage des engrais"
-        clay_land_parcel: "Parcelle d’argile lourde"
-        clay_limestone_land_parcel: "Parcelle argilo-calcaire (Groies)"
         complete_herbicide: "Herbicide total"
         coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) sac de 25kg"
@@ -1615,7 +1615,6 @@ fra:
         female_adult_cow: "Vache"
         female_hen_band: "Bande de poule"
         female_young_cow: "Génisse"
-        flap_silt_land_parcel: "Parcelle de limons battants"
         food_equipment_division: "Zone de stockage des aliments et du matériels"
         food_tank: "Silo à aliments"
         forager: "Ensileuse"
@@ -1624,7 +1623,6 @@ fra:
         gas: "Gaz"
         gasoline: "Essence"
         goat_milk: "Lait de chèvre"
-        granite_arena_land_parcel: "Parcelle de sol sur arène granitique"
         granulated_insecticide_12: "Insecticide granulés"
         grape_reaper: "Machine à vendanger"
         grass: "Herbe"
@@ -1649,7 +1647,6 @@ fra:
         horse_manure: "Fumier de cheval"
         horsebean_crop: "Culture de féverolle"
         hydraulic_oil: "Fluide hydraulique"
-        hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
         implanter: "Planteuse"
         insecticide: "Insecticide"
         irrigation_water: "Eau (irrigation)"
@@ -1701,22 +1698,14 @@ fra:
         rabbit_manure: "Fumier de lapin"
         rape_crop: "Culture de colza"
         reaper: "Moissonneuse-batteuse"
-        red_chesnut_land_parcel: "Parcelle de terres rouges à chataigniers"
         riflexine: "Riflexine"
         running_water: "Eau du réseau"
         rye_crop: "Culture de seigle"
         salmon_band: "Bande de saumon"
-        sand_land_parcel: "Parcelle sableuse"
-        sandy_clay_land_parcel: "Parcelle argilo-sableuse"
-        sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
         screed_building: "Construction béton (silo, chape, terrasse)"
         seed: "Semence"
         settlement: "Aménagement"
         silage_division: "Zone de stockage de l’ensilage"
-        silt_land_parcel: "Parcelle limoneuse"
-        silt_schist_land_parcel: "Parcelle limoneuse sur schiste ou gneiss"
-        silty_clay_land_parcel: "Parcelle argilo-limoneuse"
-        silty_clay_loam_land_parcel: "Parcelle limono-argileuse"
         small_equipment: "Petit matériel"
         so4_vine_seedling: "Plant de vigne standard (So4)"
         sorghum_crop: "Culture de sorgho"
@@ -1737,7 +1726,6 @@ fra:
         sunflower_crop: "Culture de tournesol"
         sunflower_seed_150TG: "Semence de tournesol - sac de 150.000 grains"
         superficial_plow: "Cultipacker"
-        swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
         tablur_hard_wheat_crop: "Culture de blé dur Tablur"
         tablur_hard_wheat_seed_25: "Semence de blé dur Tablur sac de 25kg"
         technician: "Technicien"
@@ -1747,7 +1735,6 @@ fra:
         trailer: "Remorque"
         triticale_crop: "Culture de Triticale"
         urban_compost: "Compost urbain"
-        valley_terrace_land_parcel: "Parcelle de sol de terrasse de vallée"
         vine_grape_berry: "Grappe de raisin"
         vine_grape_crop: "Culture de vigne"
         vine_grape_must: "Mout de raisin"
@@ -2036,6 +2023,7 @@ fra:
         gram_per_liter: "Gramme par litre"
         hectare: "Hectare"
         hectoliter: "Hectolitre"
+        # hectoliter_per_hectare: "Hectoliter per hectare"
         hectopascal: "Hectopascal"
         hour: "Heure"
         hundred: "Centaine"
