--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1591,7 +1591,7 @@ fra:
         corn_grain: "Graine de maïs"
         corn_grain_crop: "Culture de maïs grain"
         corn_seed_25: "Semence de maïs - sac de 25kg"
-        corn_seed_50TG: "Semence de maïs - sac de 50.000 grains"
+        # corn_seed_50tg: "Corn seed 50tg"
         corn_seed_crop: "Culture de maïs semence"
         corn_silage: "Ensilage de maïs"
         corn_silage_crop: "Culture de maïs ensilage"
@@ -1724,7 +1724,7 @@ fra:
         strawberry_crop: "Culture de fraisier"
         sugar_vinasse: "Vinasse de sucrerie"
         sunflower_crop: "Culture de tournesol"
-        sunflower_seed_150TG: "Semence de tournesol - sac de 150.000 grains"
+        # sunflower_seed_150tg: "Sunflower seed 150tg"
         superficial_plow: "Cultipacker"
         tablur_hard_wheat_crop: "Culture de blé dur Tablur"
         tablur_hard_wheat_seed_25: "Semence de blé dur Tablur sac de 25kg"
