generalize analysis graph

--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -39,6 +39,7 @@ fra:
     analysis:
       nature:
         cow_milk_analysis: "Analyse de lait de vache"
+        soil_analysis: "Analyse de sol"
         unitary_cow_milk_analysis: "Analyse d'un contrôle laitier"
     animal:
       variety:
@@ -924,6 +925,7 @@ fra:
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
+        milk_daily_production: "Production laitière journalière"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
@@ -936,6 +938,7 @@ fra:
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
         nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
+        phosphate_concentration: "Teneur en phosphate (P2O5)"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -943,6 +946,7 @@ fra:
         plants_density: "Densité de plantation"
         plants_rows_interval: "Intervalle inter-rangs"
         population: "Population"
+        potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
         potential_hydrogen: "Potentiel hydrogène (pH)"
         protein_concentration_index: "Taux protéïque (TP)"
@@ -1687,9 +1691,13 @@ fra:
         cartodb_api_key: "Cartodb api key"
         cartodb_login: "Cartodb login"
         cartodb_subdomain: "Cartodb subdomain"
+        cartodb_visualization_default: "Cartodb visualisation par défault"
+        cartodb_visualization_nitrogen_footprint: "Cartodb visualisation de l'empreinte amendement"
         cattling_number: "Numéro de détenteur"
         cattling_root_number: "Numéro racine du troupeau"
         charentes_alliance_extranet_username: "Login Extranet Charentes alliance "
+        cooperative_cartodb_account: "Compte cooperative Cartodb"
+        cooperative_cartodb_key: "Clef cooperative Cartodb"
         husbandry_owner_number: "Code éleveur propriétaire"
         lilco_labratory_code: "Code laboratoire LILCO"
         msa_username: "Login MSA"
@@ -5216,6 +5224,7 @@ fra:
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
+        milk_daily_production: "Production laitière journalière"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
@@ -5228,6 +5237,7 @@ fra:
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
         nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
+        phosphate_concentration: "Teneur en phosphate (P2O5)"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -5235,6 +5245,7 @@ fra:
         plants_density: "Densité de plantation"
         plants_rows_interval: "Intervalle inter-rangs"
         population: "Population"
+        potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
         potential_hydrogen: "Potentiel hydrogène (pH)"
         protein_concentration_index: "Taux protéïque (TP)"
@@ -5313,6 +5324,7 @@ fra:
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
+        milk_daily_production: "Production laitière journalière"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
@@ -5325,6 +5337,7 @@ fra:
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
         nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
+        phosphate_concentration: "Teneur en phosphate (P2O5)"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -5332,6 +5345,7 @@ fra:
         plants_density: "Densité de plantation"
         plants_rows_interval: "Intervalle inter-rangs"
         population: "Population"
+        potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
         potential_hydrogen: "Potentiel hydrogène (pH)"
         protein_concentration_index: "Taux protéïque (TP)"
@@ -5630,6 +5644,7 @@ fra:
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
+        milk_daily_production: "Production laitière journalière"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
@@ -5642,6 +5657,7 @@ fra:
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
         nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
+        phosphate_concentration: "Teneur en phosphate (P2O5)"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -5649,6 +5665,7 @@ fra:
         plants_density: "Densité de plantation"
         plants_rows_interval: "Intervalle inter-rangs"
         population: "Population"
+        potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
         potential_hydrogen: "Potentiel hydrogène (pH)"
         protein_concentration_index: "Taux protéïque (TP)"
@@ -5727,6 +5744,7 @@ fra:
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
+        milk_daily_production: "Production laitière journalière"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
@@ -5739,6 +5757,7 @@ fra:
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
         nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
+        phosphate_concentration: "Teneur en phosphate (P2O5)"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -5746,6 +5765,7 @@ fra:
         plants_density: "Densité de plantation"
         plants_rows_interval: "Intervalle inter-rangs"
         population: "Population"
+        potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
         potential_hydrogen: "Potentiel hydrogène (pH)"
         protein_concentration_index: "Taux protéïque (TP)"
