--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -290,6 +290,7 @@ fra:
         # target_variety: # Choices comes from nomenclature: varieties
       items:
         cow_milk_analysis: "Analyse de lait de vache"
+        soil_analysis: "Analyse de sol"
         unitary_cow_milk_analysis: "Analyse d'un contrôle laitier"
     animal_life_states:
       name: "États du développement animal"
@@ -860,6 +861,7 @@ fra:
         expression: "Expression"
       items:
         amount_of_substance: "Quantité de matière"
+        amount_of_substance_density: "Densité de quantité de matière"
         angle: "Angle"
         concentration: "Concentration"
         distance: "Distance"
@@ -871,6 +873,7 @@ fra:
         mass_area_density: "Quantité de matière par unité de surface"
         mass_concentration: "Concentration massique"
         mass_density: "Quantité de matière par unité de matière"
+        mass_flow: "Débit massique"
         none: "Aucune"
         power: "Puissance"
         pressure: "Pression"
@@ -880,6 +883,7 @@ fra:
         temperature: "Température"
         time: "Temps"
         volume: "Volume"
+        volume_flow: "Débit volumique"
     document_categories:
       name: "Catégories de documents"
       property_natures:
@@ -1000,9 +1004,13 @@ fra:
         cartodb_api_key: "Cartodb api key"
         cartodb_login: "Cartodb login"
         cartodb_subdomain: "Cartodb subdomain"
+        cartodb_visualization_default: "Cartodb visualisation par défault"
+        cartodb_visualization_nitrogen_footprint: "Cartodb visualisation de l'empreinte amendement"
         cattling_number: "Numéro de détenteur"
         cattling_root_number: "Numéro racine du troupeau"
         charentes_alliance_extranet_username: "Login Extranet Charentes alliance "
+        cooperative_cartodb_account: "Compte cooperative Cartodb"
+        cooperative_cartodb_key: "Clef cooperative Cartodb"
         husbandry_owner_number: "Code éleveur propriétaire"
         lilco_labratory_code: "Code laboratoire LILCO"
         msa_username: "Login MSA"
@@ -1097,6 +1105,7 @@ fra:
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
+        milk_daily_production: "Production laitière journalière"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
@@ -1109,6 +1118,7 @@ fra:
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
         nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
+        phosphate_concentration: "Teneur en phosphate (P2O5)"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -1116,6 +1126,7 @@ fra:
         plants_density: "Densité de plantation"
         plants_rows_interval: "Intervalle inter-rangs"
         population: "Population"
+        potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
         potential_hydrogen: "Potentiel hydrogène (pH)"
         protein_concentration_index: "Taux protéïque (TP)"
@@ -1591,7 +1602,7 @@ fra:
         corn_grain: "Graine de maïs"
         corn_grain_crop: "Culture de maïs grain"
         corn_seed_25: "Semence de maïs - sac de 25kg"
-        # corn_seed_50tg: "Corn seed 50tg"
+        corn_seed_50tg: "Semence de maïs - sac de 50000 grains"
         corn_seed_crop: "Culture de maïs semence"
         corn_silage: "Ensilage de maïs"
         corn_silage_crop: "Culture de maïs ensilage"
@@ -1724,7 +1735,7 @@ fra:
         strawberry_crop: "Culture de fraisier"
         sugar_vinasse: "Vinasse de sucrerie"
         sunflower_crop: "Culture de tournesol"
-        # sunflower_seed_150tg: "Sunflower seed 150tg"
+        sunflower_seed_150tg: "Semence de tournesol - sac de 150000 grains"
         superficial_plow: "Cultipacker"
         tablur_hard_wheat_crop: "Culture de blé dur Tablur"
         tablur_hard_wheat_seed_25: "Semence de blé dur Tablur sac de 25kg"
@@ -2012,6 +2023,8 @@ fra:
         celsius: "Celsius"
         centiliter: "Centilitre"
         centimeter: "Centimètre"
+        centimole: "Centimole"
+        centimole_per_kilogram: "Centimole par kilogramme"
         cubic_meter: "Mètre cube"
         day: "Jour"
         degree: "Degrée"
@@ -2020,18 +2033,21 @@ fra:
         french_horsepower: "Cheval-vapeur français"
         gradian: "Gradian"
         gram: "Gramme"
+        gram_per_kilogram: "Gramme par kilogramme"
         gram_per_liter: "Gramme par litre"
         hectare: "Hectare"
         hectoliter: "Hectolitre"
-        # hectoliter_per_hectare: "Hectoliter per hectare"
+        hectoliter_per_hectare: "Hectolitre par hectare"
         hectopascal: "Hectopascal"
         hour: "Heure"
         hundred: "Centaine"
         joule: "Joule"
         kelvin: "Kelvin"
         kilogram: "Kilogramme"
+        kilogram_per_day: "Kilogramme par jour"
         kilogram_per_hectare: "Kilogramme par hectare"
         kilogram_per_liter: "Kilogramme par litre"
+        kilogram_per_second: "Kilogramme par seconde"
         kilogram_per_square_meter: "Kilogramme par mètre carré"
         kilometer: "Kilomètre"
         kilometer_per_hour: "Kilomètre par heure"
@@ -2048,7 +2064,10 @@ fra:
         microgram: "Microgramme"
         microgram_per_liter: "Microgramme par litre"
         milliampere: "Milliampere"
+        milliequivalent: "Milli-équivalent"
+        milliequivalent_per_hundred_gram: "Milli-équivalent pour 100 grammes"
         milligram: "Milligramme"
+        milligram_per_kilogram: "Milligramme par kilogramme"
         milligram_per_liter: "Milligramme par litre"
         milliliter: "Millilitre"
         millimeter: "Millimètre"
@@ -2057,6 +2076,7 @@ fra:
         millisecond: "Millisecond"
         minute: "Minute"
         mole: "Mole"
+        mole_per_kilogram: "Mole par kilogramme"
         parts_per_million: "Partie par millions (ppm)"
         pascal: "Pascal"
         percent: "Pourcent"
