add animal procedures (in progress)

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1409,7 +1409,7 @@ arb:
     land_parcel_update: "تعديل النظام" #?
     land_parcels: "قائمة بالنظام"
     # language: "Langue"
-    # last_analyses: "Dernières analyses de lait"
+    # last_analyses: "Dernières analyses"
     # last_animals: "Dernières naissances"
     # last_clients: "Derniers clients"
     # last_computed_balance: "Dernière balance calculée"
