--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -1946,6 +1946,7 @@ fra:
         base-oil_replacement: "Vidange d'huile"
         base-organic_fertilizing: "Fertilisation organique"
         base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
+        base-pasturing: "Pâturage"
         base-plant_grinding: "Broyage de végétaux"
         base-plant_mowing: "Fauchage"
         base-plowing: "Labour"
@@ -1953,7 +1954,8 @@ fra:
         base-sowing: "Semis"
         base-spraying_on_cultivation: "Pulvérisation sur culture"
         base-straw_bunching: "Pressage de fourrages"
-        base-superficial_plowing: "Déchaumage / Décompactage / Préparation du sol"
+        base-superficial_plowing: "Déchaumage / Préparation du sol"
+        base-uncompacting: "Décompactage"
         base-vine_plant: "Plantation de vigne"
         base-wheat_crop: "Culture de blé (standard)"
         base-wine_transfer: "Transfert de vin"
