--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -52,9 +52,11 @@ fra:
     grape_picker: "Vendangeur"
     grape_reaper: "Machine à vendanger"
     grape_reaper_driver: "Conducteur de machine à vendanger"
+    grass: "Herbe"
     grinded: "Résidu de culture"
     grinder: "Broyeur"
     harrow: "Herse"
+    herd: "Troupeau"
     implanter_man: "Planteur"
     implanter_tool: "Équipement de plantation"
     insecticide_to_input: "Insecticide à distribuer"
@@ -121,6 +123,7 @@ fra:
     base-oil_replacement: "Vidange d'huile"
     base-organic_fertilizing: "Fertilisation organique"
     base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
+    base-pasturing: "Pâturage"
     base-plant_grinding: "Broyage de végétaux"
     base-plant_mowing: "Fauchage"
     base-plowing: "Labour"
@@ -128,7 +131,8 @@ fra:
     base-sowing: "Semis"
     base-spraying_on_cultivation: "Pulvérisation sur culture"
     base-straw_bunching: "Pressage de fourrages"
-    base-superficial_plowing: "Déchaumage / Décompactage / Préparation du sol"
+    base-superficial_plowing: "Déchaumage / Préparation du sol"
+    base-uncompacting: "Décompactage"
     base-vine_plant: "Plantation de vigne"
     base-wheat_crop: "Culture de blé (standard)"
     base-wine_transfer: "Transfert de vin"
