--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1157,7 +1157,7 @@ jpn:
     # land_parcel_name: "Parcelle"
     # land_parcels: "Parcelles"
     # language: "Langue"
-    # last_analyses: "Dernières analyses de lait"
+    # last_analyses: "Dernières analyses"
     # last_animals: "Dernières naissances"
     # last_clients: "Derniers clients"
     # last_computed_balance: "Dernière balance calculée"
