--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -45,6 +45,7 @@ eng:
         # clean: "Nettoyer"
         consume: "Consume"
         # cut: "Couper"
+        # deliver: "Distribuer"
         drive: "Drive"
         # feed: "Nourrir"
         fertilize: "Fertilize"
@@ -1556,13 +1557,16 @@ eng:
       items:
         animal_cares: "Animal cares" #?
         # animal_feeding: "Alimentation des animaux"
+        # animal_health: "Hygiène des animaux"
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
+        # cleaning: "Nettoyage"
         # consummables_addition: "Mise à niveau"
         # cultipacking: "Cultipacking"
         enrichment: "Enrichment" #?
         feeding: "Feeding" #?
         # fermentation: "Fermentation"
+        # food_supply: "Alimentation"
         # grinding: "Broyage"
         # growth_control: "Contrôle de croissance"
         # harvest: "Récolte"
@@ -1573,6 +1577,7 @@ eng:
         # maintenance: "Maintenance"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
+        # pasturing: "Pâturage"
         # piece_replacement: "Remplacement de pièces"
         # plant_fertilisation: "Fertilisation"
         # plant_illness_treatment: "Protection des cultures"
@@ -1581,6 +1586,7 @@ eng:
         # pruning: "Taille"
         # raking: "Hersage"
         reproduction: "Reproduction" #?
+        # silage_autosupply: "Alimentation en libre service"
         # soil_cleaning: "Désinfection du sol"
         # soil_enrichment: "Amendement"
         # sowing: "Semis"
@@ -1696,6 +1702,7 @@ eng:
           # 12kg_bag: "sac de 12kg"
           # 150TG_bag: "sac de 150.000 grains"
           # 1l_dose: "dose de 1l"
+          # 220TG_bag: "sac de 220.000 grains"
           # 24liter_can: "Bidon de 24 litres"
           # 25kg_bag: "sac de 25kg"
           # 50TG_bag: "sac de 50.000 grains"
@@ -1732,6 +1739,7 @@ eng:
         # animal_building: "Bâtiment d’accueil pour les animaux"
         # animal_division: "Zone accueillant des animaux"
         # animal_food_division: "Zone accueillant des aliments pour animaux"
+        # animal_housing_cleaner: "Rabot"
         # animal_medicine_tank: "Réserve de médicaments"
         # animal_waste_building_division: "Zone des déchets organiques"
         # annual_fallow_crop: "Jachère annuelle"
@@ -1769,6 +1777,7 @@ eng:
         # chemical_fertilizer_division: "Emplacement de stockage des engrais"
         # complete_herbicide: "Herbicide total"
         # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
+        # coop:aviator_xpro_5l: "Aviator xpro 5l"
         # coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) sac de 25kg"
         # coop:bth_s_ascott_r1_gau+_red_25kg: "Semence de Blé tendre Ascott (r1 gau+ red) sac de 25kg"
         # coop:bth_s_caphorn_r1_gau+red_25kg: "Semence de Blé tendre Caphorn (r1 gau+ red) sac de 25kg"
@@ -1779,6 +1788,7 @@ eng:
         # coop:metarex_ino_20kg: "metarex ino sac de 20kg"
         # coop:metarex_rg_tds_20kg: "metarex rg tds - sac de 20kg"
         # coop:sel_mer_essore_la_baleine_sac_25kg: "sel mer essore la baleine - sac de 25kg"
+        # coop:sorgho_ensilage_bmr_333_220mg: "Semence de sorgho ensilage bmr 333 220mg"
         # coop:super_46%_gr._vr: "super 46% COOP gr vrac"
         # coop:uree_gr_vrac: "uree gr vrac"
         # corn_crop: "Culture de maïs"
@@ -1899,6 +1909,7 @@ eng:
         # screed_building: "Construction béton (silo, chape, terrasse)"
         # seed: "Semence"
         # settlement: "Aménagement"
+        # silage_distributor: "Désileuse"
         # silage_division: "Zone de stockage de l’ensilage"
         # small_equipment: "Petit matériel"
         # so4_vine_seedling: "Plant de vigne standard (So4)"
@@ -1967,6 +1978,7 @@ eng:
         # animal_building_division: "Zone dédiée aux animaux"
         # animal_food: "Aliment du bétail"
         # animal_food_building_division: "Zone de stockage dédiée aux aliments"
+        # animal_housing_cleaner: "Matériel de nettoyage"
         # animal_medicine: "Produit vétérinaire"
         # animal_medicine_tank: "Reserve de médicaments"
         # baler: "Botteleuse"
@@ -1988,6 +2000,7 @@ eng:
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # fertilizer_division: "Zone de stockage des engrais"
+        # food_distributor: "Matériel de distribution d'aliments"
         # food_equipment_division: "Zone de stockage des équipements et des aliments"
         # food_tank: "Silo à aliments"
         # forager: "Ensileuse"
@@ -2362,6 +2375,7 @@ eng:
         # chardonnay: "Chardonnay"
         # chemical_fertilizer: "Engrais minéral"
         # cichorium: "Chicoré"
+        # cleaner: "Rabot"
         # colombar_blanc: "Colombar blanc"
         # compost: "Compost"
         # corylus: "Corylus"
@@ -2383,6 +2397,7 @@ eng:
         # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
         # fabulis: "Fabulis"
+        # food_deliver: "Désileuse"
         # forager: "Ensileuse"
         # fragaria: "Fraise"
         # fruit: "Fruit"
