--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -90,6 +90,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -111,6 +112,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -311,6 +313,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -332,6 +335,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -532,6 +536,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -553,6 +558,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -1023,6 +1029,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -1044,6 +1051,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -1314,6 +1322,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -1335,6 +1344,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -1753,6 +1763,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -1774,6 +1785,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -1929,6 +1941,8 @@ fra:
       reference_name:
         base-all_in_one_sowing: "Semis 'tout-en-un'"
         base-animal_birth: "Naissance d’un animal"
+        base-animal_housing_cleaning: "Nettoyage de stabulation"
+        base-animal_housing_mulching: "Paillage de stabulation"
         base-animal_treatment: "Traitement animal"
         base-calving_one: "Vêlage unique"
         base-calving_twin: "Vêlage jumeaux"
@@ -2026,6 +2040,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -2047,6 +2062,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -2247,6 +2263,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -2268,6 +2285,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -2610,6 +2628,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -2631,6 +2650,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -2831,6 +2851,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -2852,6 +2873,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -3110,6 +3132,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -3131,6 +3154,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -3331,6 +3355,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -3352,6 +3377,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -3552,6 +3578,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -3573,6 +3600,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -3772,6 +3800,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -3793,6 +3822,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -3993,6 +4023,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -4014,6 +4045,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -4214,6 +4246,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -4235,6 +4268,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -4396,6 +4430,7 @@ fra:
         animal_building_division: "Zone dédiée aux animaux"
         animal_food: "Aliment du bétail"
         animal_food_building_division: "Zone de stockage dédiée aux aliments"
+        animal_housing_cleaner: "Matériel de nettoyage"
         animal_medicine: "Produit vétérinaire"
         animal_medicine_tank: "Reserve de médicaments"
         baler: "Botteleuse"
@@ -4417,6 +4452,7 @@ fra:
         female_adult_cow: "Vache"
         female_young_cow: "Génisse"
         fertilizer_division: "Zone de stockage des engrais"
+        food_distributor: "Matériel de distribution d'aliments"
         food_equipment_division: "Zone de stockage des équipements et des aliments"
         food_tank: "Silo à aliments"
         forager: "Ensileuse"
@@ -4529,6 +4565,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -4550,6 +4587,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -4783,6 +4821,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -4804,6 +4843,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -5003,6 +5043,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -5024,6 +5065,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
@@ -5424,6 +5466,7 @@ fra:
         chardonnay: "Chardonnay"
         chemical_fertilizer: "Engrais minéral"
         cichorium: "Chicoré"
+        cleaner: "Rabot"
         colombar_blanc: "Colombar blanc"
         compost: "Compost"
         corylus: "Corylus"
@@ -5445,6 +5488,7 @@ fra:
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
+        food_deliver: "Désileuse"
         forager: "Ensileuse"
         fragaria: "Fraise"
         fruit: "Fruit"
