update animal's procedures

--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -32,15 +32,18 @@ fra:
     nitrogen_unities_density: "Unités d'azote par surface"
     phosphorus_unities_density: "Unités de phosphore par surface"
     potassium_unities_density: "Unités de potassium par surface"
+    dry_matter_mass: "Masse de matière sèche"
   procedure_variables:
     baler: "Botteleuse"
     baler_driver: "Conducteur (tracteur-botteleuse)"
     caregiver: "Soigneur"
+    cleaner: "Outil de nettoyage"
     child: "Nouveau né"
     cropper: "Moissonneuse batteuse"
     cropper_driver: "Conducteur de moissonneuse batteuse"
     cultivation: "Culture"
     driver: "Conducteur"
+    excrement_zone: "Fumière"
     fertilizer: "Engrais"
     fertilizer_to_spread: "Engrais à épandre"
     first_child: "Premier nouveau né"
@@ -89,6 +92,8 @@ fra:
     seeds: "Semences"
     seeds_to_sow: "Semence à semer"
     silage: "Ensilage"
+    silage_to_give: "Ensilage à donner"
+    silage_unloader: "Désileuse"
     silo: "Silo"
     sower: "Semoir"
     sprayer: "Pulvérisateur"
@@ -130,6 +135,7 @@ fra:
     base-plant_mowing: "Fauchage"
     base-plowing: "Labour"
     base-raking: "Hersage"
+    base-silage_unload: "Alimentation d'un troupeau via désileuse"
     base-sowing: "Semis"
     base-spraying_on_cultivation: "Pulvérisation sur culture"
     base-straw_bunching: "Pressage de fourrages"
