--- a/config/locales/arb/procedures.yml
+++ b/config/locales/arb/procedures.yml
@@ -28,6 +28,7 @@ arb:
       # simple_attachment: "On attèle %{carrier} et %{carried}"
       # simple_reading_task: "%{indicator} est mesuré"
   procedure_handlers:
+    # dry_matter_mass: "Masse de matière sèche"
     # dry_matter_mass_area_density: "Masse de matière sèche par surface"
     # nitrogen_unities_density: "Unités d'azote par surface"
     # phosphorus_unities_density: "Unités de phosphore par surface"
@@ -37,10 +38,12 @@ arb:
     # baler_driver: "Conducteur (tracteur-botteleuse)"
     # caregiver: "Soigneur"
     # child: "Nouveau né"
+    # cleaner: "Outil de nettoyage"
     # cropper: "Moissonneuse batteuse"
     # cropper_driver: "Conducteur de moissonneuse batteuse"
     # cultivation: "Culture"
     # driver: "Conducteur"
+    # excrement_zone: "Fumière"
     # fertilizer: "Engrais"
     # fertilizer_to_spread: "Engrais à épandre"
     # first_child: "Premier nouveau né"
@@ -89,6 +92,8 @@ arb:
     # seeds: "Semences"
     # seeds_to_sow: "Semence à semer"
     # silage: "Ensilage"
+    # silage_to_give: "Ensilage à donner"
+    # silage_unloader: "Désileuse"
     # silo: "Silo"
     # sower: "Semoir"
     # sprayer: "Pulvérisateur"
@@ -130,6 +135,7 @@ arb:
     # base-plant_mowing: "Fauchage"
     # base-plowing: "Labour"
     # base-raking: "Hersage"
+    # base-silage_unload: "Alimentation d'un troupeau via désileuse"
     # base-sowing: "Semis"
     # base-spraying_on_cultivation: "Pulvérisation sur culture"
     # base-straw_bunching: "Pressage de fourrages"
