--- a/config/locales/eng/complement.yml
+++ b/config/locales/eng/complement.yml
@@ -61,6 +61,24 @@ eng:
         service: "Service"
         worker: "Worker"
         zone: "Zone"
+    building_division:
+      variety:
+        animal: "Animal"
+        bioproduct: "Bioproduct"
+        equipment: "Equipment"
+        fungus: "Fungus"
+        immatter: "Immatter"
+        matter: "Matter"
+        mineral_matter: "Mineral matter"
+        organic_matter: "Organic matter"
+        phytosanitary: "Phytosanitary"
+        plant: "Plant"
+        product: "Product"
+        product_group: "Product group"
+        property_title: "Property title"
+        service: "Service"
+        worker: "Worker"
+        zone: "Zone"
     catalog_price:
       currency:
         AED: "UAE Dirham"
@@ -313,6 +331,24 @@ eng:
         syndicate: "Syndicate"
     entity_link:
 
+    equipment:
+      variety:
+        animal: "Animal"
+        bioproduct: "Bioproduct"
+        equipment: "Equipment"
+        fungus: "Fungus"
+        immatter: "Immatter"
+        matter: "Matter"
+        mineral_matter: "Mineral matter"
+        organic_matter: "Organic matter"
+        phytosanitary: "Phytosanitary"
+        plant: "Plant"
+        product: "Product"
+        product_group: "Product group"
+        property_title: "Property title"
+        service: "Service"
+        worker: "Worker"
+        zone: "Zone"
     financial_asset:
       currency:
         AED: "UAE Dirham"
