--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1996,6 +1996,7 @@ spa:
         # chicken: "Poulet"
         # duck: "Canard"
         # escourgeon_barley: "Orge escourgeon"
+        # fixed_frost_fallow_land: "Gel fixe"
         # garlic: "Ail"
         # grain_corn: "Maïs grain"
         # hazel: "Noisettier"
@@ -2007,6 +2008,7 @@ spa:
         # melon: "Melon"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
+        # others_usages: "Autres utilisations (non admissibles)"
         # oyster: "Huître"
         # permanent_meadow: "Prairie permanente"
         # plum: "Prune"
