--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1999,6 +1999,7 @@ arb:
         # chicken: "Poulet"
         # duck: "Canard"
         # escourgeon_barley: "Orge escourgeon"
+        # fixed_frost_fallow_land: "Gel fixe"
         # garlic: "Ail"
         # grain_corn: "Maïs grain"
         # hazel: "Noisettier"
@@ -2010,6 +2011,7 @@ arb:
         # melon: "Melon"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
+        # others_usages: "Autres utilisations (non admissibles)"
         # oyster: "Huître"
         # permanent_meadow: "Prairie permanente"
         # plum: "Prune"
